--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer-loader": "^1.0.0",
     "css-loader": "^0.9.0",
     "gulp": "^3.8.10",
+    "gulp-gh-pages": "^0.4.0",
     "gulp-webpack": "^1.1.0",
     "jsx-loader": "^0.12.2",
     "react": "^0.12.1",
